# specifications/src/main/java/org/dcsa/conformance/specifications/standards/an/v100/GetArrivalNoticesEndpoint.java
@@ -93,21 +93,21 @@ public class GetArrivalNoticesEndpoint implements QueryParametersFilterEndpoint 
           .example("SR12345A")
           .schema(new Schema<String>().type("string"));
 
-  private final Parameter minEtaAtPortOfDischargeDate =
+  private final Parameter portOfDischargeArrivalDateMin =
       new Parameter()
           .in("query")
-          .name("minEtaAtPortOfDischargeDate")
+          .name("portOfDischargeArrivalDateMin")
           .description(
-              "Retrieve arrival notices with an ETA at port of discharge on or after this date")
+              "Retrieve arrival notices with a date of arrival of the vessel at the Port of Discharge on or after this date")
           .example("2025-01-23")
           .schema(new Schema<String>().type("string").format("date"));
 
-  private final Parameter maxEtaAtPortOfDischargeDate =
+  private final Parameter portOfDischargeArrivalDateMax =
       new Parameter()
           .in("query")
-          .name("maxEtaAtPortOfDischargeDate")
+          .name("portOfDischargeArrivalDateMax")
           .description(
-              "Retrieve arrival notices with an ETA at port of discharge on or before this date")
+              "Retrieve arrival notices with a date of arrival of the vessel at the Port of Discharge on or before this date")
           .example("2025-01-23")
           .schema(new Schema<String>().type("string").format("date"));
 
@@ -182,8 +182,8 @@ the publisher should **not** include the PDF visualization if this parameter is 
         universalImportVoyageReference,
         carrierServiceCode,
         universalServiceReference,
-        minEtaAtPortOfDischargeDate,
-        maxEtaAtPortOfDischargeDate,
+        portOfDischargeArrivalDateMin,
+        portOfDischargeArrivalDateMax,
         includeVisualization,
         removeCharges,
         limit,
@@ -205,80 +205,84 @@ the publisher should **not** include the PDF visualization if this parameter is 
                 List.of(transportDocumentReferences, equipmentReferences),
                 List.of(equipmentReferences),
                 List.of(
-                    minEtaAtPortOfDischargeDate, maxEtaAtPortOfDischargeDate, equipmentReferences),
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
+                    equipmentReferences),
                 // POD
-                List.of(minEtaAtPortOfDischargeDate, maxEtaAtPortOfDischargeDate, portOfDischarge),
-                // vessel IMO + voyage number (+ service)
-                List.of(minEtaAtPortOfDischargeDate, maxEtaAtPortOfDischargeDate, vesselIMONumber),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin, portOfDischargeArrivalDateMax, portOfDischarge),
+                // vessel IMO + voyage number (+ service)
+                List.of(
+                    portOfDischargeArrivalDateMin, portOfDischargeArrivalDateMax, vesselIMONumber),
+                List.of(
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselIMONumber,
                     carrierImportVoyageNumber),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselIMONumber,
                     carrierImportVoyageNumber,
                     carrierServiceCode),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselIMONumber,
                     carrierImportVoyageNumber,
                     universalServiceReference),
                 // vessel IMO + voyage reference (+ service)
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselIMONumber,
                     universalImportVoyageReference),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselIMONumber,
                     universalImportVoyageReference,
                     carrierServiceCode),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselIMONumber,
                     universalImportVoyageReference,
                     universalServiceReference),
                 // vessel name + voyage number (+ service)
-                List.of(minEtaAtPortOfDischargeDate, maxEtaAtPortOfDischargeDate, vesselName),
+                List.of(portOfDischargeArrivalDateMin, portOfDischargeArrivalDateMax, vesselName),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselName,
                     carrierImportVoyageNumber),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselName,
                     carrierImportVoyageNumber,
                     carrierServiceCode),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselName,
                     carrierImportVoyageNumber,
                     universalServiceReference),
                 // vessel name + voyage reference (+ service)
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselName,
                     universalImportVoyageReference),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselName,
                     universalImportVoyageReference,
                     carrierServiceCode),
                 List.of(
-                    minEtaAtPortOfDischargeDate,
-                    maxEtaAtPortOfDischargeDate,
+                    portOfDischargeArrivalDateMin,
+                    portOfDischargeArrivalDateMax,
                     vesselName,
                     universalImportVoyageReference,
                     universalServiceReference))));
